@@ -22,6 +22,9 @@ version 0.7.2 - Currently available as svn snapshot
 		there is remaining $ in the script.
   - CHG: make 'configName' and 'prompt' of simuOpt options obsolete, use
 		'label' instead.
+  - BUG: fix a memory leak bug in stator
+  - BUG: fix starting allele problem in simuCDCV.py
+
 
 version 0.7.1 - (Rev 378) - Aug 20, 2006
   - BUG: Fix a bug in backward trajectory simulation
